feat: swagger and readme file
